@@ -202,7 +202,7 @@ throw|throw
 operator|new
 name|IllegalArgumentException
 argument_list|(
-literal|"undecalred attribute "
+literal|"undeclared attribute "
 operator|+
 name|attributeName
 operator|+
@@ -2918,6 +2918,45 @@ name|getClass
 argument_list|()
 argument_list|)
 throw|;
+block|}
+specifier|public
+name|boolean
+name|isTopLevelMacroRecord
+parameter_list|()
+block|{
+if|if
+condition|(
+name|_objectStack
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+name|ObjectDescriptor
+name|od
+init|=
+operator|(
+name|ObjectDescriptor
+operator|)
+name|_objectStack
+operator|.
+name|peek
+argument_list|()
+decl_stmt|;
+return|return
+operator|(
+name|od
+operator|.
+name|getObject
+argument_list|()
+operator|instanceof
+name|MacroDef
+operator|)
+return|;
 block|}
 specifier|public
 name|void
