@@ -736,6 +736,34 @@ literal|"@{name}"
 argument_list|)
 expr_stmt|;
 block|}
+if|else if
+condition|(
+name|_configurator
+operator|.
+name|isTopLevelMacroRecord
+argument_list|()
+operator|&&
+name|name
+operator|.
+name|indexOf
+argument_list|(
+literal|"@{name}"
+argument_list|)
+operator|!=
+operator|-
+literal|1
+condition|)
+block|{
+name|attributes
+operator|.
+name|put
+argument_list|(
+literal|"name"
+argument_list|,
+name|name
+argument_list|)
+expr_stmt|;
+block|}
 else|else
 block|{
 name|attributes
