@@ -2034,6 +2034,149 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testMacroAndRef
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// test case for IVY-319
+name|Ivy
+name|ivy
+init|=
+operator|new
+name|Ivy
+argument_list|()
+decl_stmt|;
+name|XmlIvyConfigurationParser
+name|parser
+init|=
+operator|new
+name|XmlIvyConfigurationParser
+argument_list|(
+name|ivy
+argument_list|)
+decl_stmt|;
+name|parser
+operator|.
+name|parse
+argument_list|(
+name|XmlIvyConfigurationParserTest
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"ivyconf-macro+ref.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|DependencyResolver
+name|shared
+init|=
+name|ivy
+operator|.
+name|getResolver
+argument_list|(
+literal|"shared"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|shared
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|shared
+operator|instanceof
+name|FileSystemResolver
+argument_list|)
+expr_stmt|;
+name|DependencyResolver
+name|mychain
+init|=
+name|ivy
+operator|.
+name|getResolver
+argument_list|(
+literal|"mychain"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|mychain
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|mychain
+operator|instanceof
+name|ChainResolver
+argument_list|)
+expr_stmt|;
+name|ChainResolver
+name|chain
+init|=
+operator|(
+name|ChainResolver
+operator|)
+name|mychain
+decl_stmt|;
+name|List
+name|subresolvers
+init|=
+name|chain
+operator|.
+name|getResolvers
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|subresolvers
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|subresolvers
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|shared
+operator|=
+operator|(
+name|DependencyResolver
+operator|)
+name|subresolvers
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"shared"
+argument_list|,
+name|shared
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|shared
+operator|instanceof
+name|FileSystemResolver
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testInclude
 parameter_list|()
 throws|throws
